Internationalizing the log-in, register page and the invalid input commands for them

--- a/crossfit-client/src/main/resources/i18n/messages.properties
+++ b/crossfit-client/src/main/resources/i18n/messages.properties
@@ -27,3 +27,70 @@ footer_join_community=Join our CrossFit community and transform together
 footer_pushing_limits=Pushing limits, breaking barriers, together.
 footer_opening_hours=Opening hours
 footer_hours_closed=Closed
+
+# Login page messages
+login.title=Login Page
+login.heading=Please Log In
+login.username=Username
+login.password=Password
+login.remember.me=Remember me
+login.submit=Log In
+login.register.prompt=Don't have an account?
+login.register.link=Register
+
+# Register page messages
+register.title=Register Page
+register.heading=Register Now!
+register.firstName=First Name
+register.lastName=Last Name
+register.username=Username
+register.email=Email
+register.password=Password
+register.confirmPassword=Confirm Password
+register.bornOn=Date of Birth
+register.address=Address
+register.nationality=Nationality
+register.photo=Photo
+register.telephoneNumber=Telephone Number
+register.submit=Sign in
+register.home.link=Go to home page
+
+
+# Validation messages
+field.required=This field is required
+field.accepted=You must accept the terms and conditions
+
+# Email validation messages
+invalid.email.format=Invalid email format or domain
+empty.email=Email cannot be empty
+invalid.domain.option=Invalid domain option. Please choose abv, gmail, or yahoo
+email.already.in.use=The current email has been already used! Pick another one!
+username.already.taken=Username has already been taken!
+
+# Born date validation messages
+invalid.born.date=Invalid date of birth format
+not.old.enough=You must be at least 18 years old
+empty.born.date=Please provide information about your birthday !
+
+# Password validation messages
+invalid.pass=Invalid password ! Try again ...
+password.cannot.be.null=Password cannot be null
+password.too.short=Password is too short
+password.too.long=Password is too long
+password.should.contain.lowercase.letter=Password should contain at least one lowercase letter
+password.should.contain.uppercase.letter=Password should contain at least one uppercase letter
+password.should.contain.digit=Password should contain at least one digit
+password.should.contain.special.symbol=Password should contain at least one special symbol
+
+not.matching.passwords=Passwords do not match !
+
+# Phone number validation messages
+invalid.phone.number.format=Invalid phone number format
+empty.phone=Please provide your phone number !
+unique.phone.required=An account with this number is already registered !
+
+# File validation messages
+file.invalid=Invalid file
+file.empty=Invalid file
+file.size.exceeded=File size exceeds the maximum allowed
+file.type.not.allowed=File type not allowed. Only JPEG and JPG are allowed
