--- a/crossfit-client/src/main/resources/i18n/messages_de.properties
+++ b/crossfit-client/src/main/resources/i18n/messages_de.properties
@@ -27,3 +27,69 @@ footer_join_community=Schließen Sie sich unserer CrossFit-Community an und verw
 footer_pushing_limits=Grenzen überschreiten, Barrieren brechen, gemeinsam.
 footer_opening_hours=Öffnungszeiten
 footer_hours_closed=Geschlossen
+
+# Login page messages (Translated)
+login.title=Login Seite
+login.heading=Bitte einloggen
+login.username=Benutzername
+login.password=Passwort
+login.remember.me=Erinnere dich an mich
+login.submit=Einloggen
+login.register.prompt=Haben Sie kein Konto?
+login.register.link=Registrieren
+
+# Register page messages (Translated)
+register.title=Registrierungsseite
+register.heading=Jetzt registrieren!
+register.firstName=Vorname
+register.lastName=Nachname
+register.username=Benutzername
+register.email=E-Mail
+register.password=Passwort
+register.confirmPassword=Passwort bestätigen
+register.bornOn=Geburtsdatum
+register.address=Adresse
+register.nationality=Nationalität
+register.photo=Foto
+register.telephoneNumber=Telefonnummer
+register.submit=Registrieren
+register.home.link=Zur Startseite
+
+# Validation messages
+field.required=Dieses Feld ist erforderlich
+field.accepted=Sie müssen die Geschäftsbedingungen akzeptieren
+
+# Email validation messages
+invalid.email.format=Ungültiges E-Mail-Format oder Domain
+empty.email=E-Mail darf nicht leer sein
+invalid.domain.option=Ungültige Domain-Option. Bitte wählen Sie abv, gmail oder yahoo
+email.already.in.use=Die aktuelle E-Mail wurde bereits verwendet! Wählen Sie eine andere!
+username.already.taken=Benutzername ist bereits vergeben!
+
+# Born date validation messages
+invalid.born.date=Ungültiges Geburtsdatum-Format
+not.old.enough=Sie müssen mindestens 18 Jahre alt sein
+empty.born.date=Bitte geben Sie Informationen zu Ihrem Geburtstag an!
+
+# Password validation messages
+invalid.pass=Ungültiges Passwort! Versuchen Sie es erneut...
+password.cannot.be.null=Passwort darf nicht null sein
+password.too.short=Passwort ist zu kurz
+password.too.long=Passwort ist zu lang
+password.should.contain.lowercase.letter=Passwort sollte mindestens einen Kleinbuchstaben enthalten
+password.should.contain.uppercase.letter=Passwort sollte mindestens einen Großbuchstaben enthalten
+password.should.contain.digit=Passwort sollte mindestens eine Ziffer enthalten
+password.should.contain.special.symbol=Passwort sollte mindestens ein Sonderzeichen enthalten
+
+not.matching.passwords=Passwörter stimmen nicht überein!
+
+# Phone number validation messages
+invalid.phone.number.format=Ungültiges Telefonnummern-Format
+empty.phone=Bitte geben Sie Ihre Telefonnummer an!
+unique.phone.required=Ein Konto mit dieser Nummer ist bereits registriert!
+
+# File validation messages
+file.invalid=Ungültige Datei
+file.empty=Ungültige Datei
+file.size.exceeded=Dateigröße überschreitet das zulässige Maximum
+file.type.not.allowed=Dateityp nicht erlaubt. Nur JPEG und JPG sind erlaubt
