Fixing small bugs

--- a/crossfit-client/src/main/resources/i18n/messages.properties
+++ b/crossfit-client/src/main/resources/i18n/messages.properties
@@ -12,7 +12,7 @@ nav_bar_upcoming_trainings=Upcoming Trainings
 nav_bar_logout=Logout
 
 
-index_welcome_authenticated=Welcome, {0}!
+index_welcome_authenticated=Welcome, 
 index_welcome_anonymous=Welcome to our CrossFit community, where we push boundaries and achieve greatness. Our state-of-the-art facilities and expert trainers are dedicated to helping you reach your fitness goals.
 index_description_anonymous=Join us and experience high-intensity workouts, personalized training plans, and a supportive community that will motivate you every step of the way. Transform your body and mind with our innovative fitness programs designed to challenge and inspire you.
 index_join_now=Join Now
