--- a/crossfit-client/src/main/resources/i18n/messages_de.properties
+++ b/crossfit-client/src/main/resources/i18n/messages_de.properties
@@ -1,9 +1,9 @@
 # messages_de.properties
-nav_bar_language=Wähle deine Sprache: 
+nav_bar_language=Sprache: 
 nav_bar_home=Startseite
 nav_bar_about_us=Über uns
 nav_bar_workouts=Workouts
-nav_bar_add_event=Veranstaltung hinzufügen
+nav_bar_add_event=Füge Event
 nav_bar_my_workouts=Meine Workouts
 nav_bar_profile=Profil
 nav_bar_memberships=Mitgliedschaften
@@ -12,7 +12,7 @@ nav_bar_upcoming_trainings=Bevorstehende Trainings
 nav_bar_logout=Abmelden
 
 
-index_welcome_authenticated=Willkommen, {0}!
+index_welcome_authenticated=Willkommen, 
 index_welcome_anonymous=Willkommen in unserer CrossFit-Community, in der wir Grenzen überschreiten und Grossartiges erreichen. Unsere hochmodernen Einrichtungen und Expertentrainer helfen Ihnen, Ihre Fitnessziele zu erreichen.
 index_description_anonymous=Schliessen Sie sich uns an und erleben Sie hochintensive Workouts, personalisierte Trainingspläne und eine unterstützende Community, die Sie auf Schritt und Tritt motivieren wird. Transformieren Sie Körper und Geist mit unseren innovativen Fitnessprogrammen, die Sie herausfordern und inspirieren sollen.
 index_join_now=Jetzt beitreten
