Implementing the logic for add event page and fixing a problem with the rest api for the community- events

--- a/crossfit-client/src/main/resources/i18n/messages.properties
+++ b/crossfit-client/src/main/resources/i18n/messages.properties
@@ -60,6 +60,12 @@ register.home.link=Go to home page
 field.required=This field is required
 field.accepted=You must accept the terms and conditions
 
+#YouTube URL
+youtube.url.invalid = Ïnvalid youtube url ! Please provide correct one ! 
+
+#Date
+date.not.in.past = Date should not be in the past !
+
 # Email validation messages
 invalid.email.format=Invalid email format or domain
 empty.email=Email cannot be empty
