--- a/crossfit-client/src/main/resources/i18n/messages_de.properties
+++ b/crossfit-client/src/main/resources/i18n/messages_de.properties
@@ -59,6 +59,14 @@ register.home.link=Zur Startseite
 field.required=Dieses Feld ist erforderlich
 field.accepted=Sie müssen die Geschäftsbedingungen akzeptieren
 
+
+#YouTube URL
+youtube.url.invalid = Ïnvalid youtube url ! Bitte gib eine korrekte an ! 
+
+#Date
+date.not.in.past = Date muss nicht in der Vergangenheit sein!
+
+
 # Email validation messages
 invalid.email.format=Ungültiges E-Mail-Format oder Domain
 empty.email=E-Mail darf nicht leer sein
