Adding logic for buying a membership and also scheduler to check when the time of the membership is over to remove it from the user and set a null membership

--- a/crossfit-client/src/main/resources/i18n/messages_de.properties
+++ b/crossfit-client/src/main/resources/i18n/messages_de.properties
@@ -101,3 +101,20 @@ file.invalid=Ungültige Datei
 file.empty=Ungültige Datei
 file.size.exceeded=Dateigröße überschreitet das zulässige Maximum
 file.type.not.allowed=Dateityp nicht erlaubt. Nur JPEG und JPG sind erlaubt
+
+
+# Payment validation messages
+payment.fullname.required=Vollständiger Name ist erforderlich
+payment.email.invalid=E-Mail sollte gültig sein
+payment.email.required=E-Mail ist erforderlich
+payment.address.required=Adresse ist erforderlich
+payment.country.required=Land ist erforderlich
+payment.town.required=Stadt ist erforderlich
+payment.name.on.card.required=Name auf der Karte ist erforderlich
+payment.card.number.required=Kreditkartennummer ist erforderlich
+payment.card.number.size=Kartennummer muss 16 Ziffern lang sein
+payment.expiration.month.required=Ablaufmonat ist erforderlich
+payment.expiration.year.required=Ablaufjahr ist erforderlich
+payment.expiration.year.not.in.past=Ablaufjahr darf nicht in der Vergangenheit liegen
+payment.cvv.required=CVV ist erforderlich
+payment.cvv.size=CVV muss 3 Ziffern lang sein
