--- a/crossfit-client/src/main/resources/i18n/messages_en.properties
+++ b/crossfit-client/src/main/resources/i18n/messages_en.properties
@@ -100,3 +100,20 @@ file.invalid=Invalid file
 file.empty=Invalid file
 file.size.exceeded=File size exceeds the maximum allowed
 file.type.not.allowed=File type not allowed. Only JPEG and JPG are allowed
+
+
+# Payment validation messages
+payment.fullname.required=Full name is required
+payment.email.invalid=Email should be valid
+payment.email.required=Email is required
+payment.address.required=Address is required
+payment.country.required=Country is required
+payment.town.required=Town is required
+payment.name.on.card.required=Name on card is required
+payment.card.number.required=Credit card number is required
+payment.card.number.size=Card number must be 16 digits
+payment.expiration.month.required=Expiration month is required
+payment.expiration.year.required=Expiration year is required
+payment.expiration.year.not.in.past=Expiration year cannot be in the past
+payment.cvv.required=CVV is required
+payment.cvv.size=CVV must be 3 digits
