Creating test for the event service and fixing a method for counting the revenue

--- a/crossfit-client/src/main/resources/i18n/messages_de.properties
+++ b/crossfit-client/src/main/resources/i18n/messages_de.properties
@@ -20,7 +20,8 @@ index_login=Anmelden
 index_schedule_description=Planen Sie Ihre Workouts effektiv
 index_coaches_description=Lernen Sie unsere erfahrenen Trainer kennen
 index_nutrition_blog_description=Entdecken Sie wichtige Ernährungstipps für Spitzenleistungen in unserem Blog!
-index_explore_community=Entdecken unsere Community
+index_explore_community=Sei Fit !
+index_text =Erkunde unsere hochintensiven Workouts und gemeinschaftsorientierten Fitnessprogramme
 
 footer_stay_motivated=Bleiben Sie motiviert
 footer_join_community=Schließen Sie sich unserer CrossFit-Community an und verwandeln Sie sich gemeinsam
