--- a/crossfit-client/src/main/resources/i18n/messages_en.properties
+++ b/crossfit-client/src/main/resources/i18n/messages_en.properties
@@ -20,7 +20,8 @@ index_login=Log In
 index_schedule_description=Plan your workouts effectively
 index_coaches_description=Meet our experienced coaches
 index_nutrition_blog_description=Discover essential nutrition advice for peak performance in our blog!
-index_explore_community=Explore our community
+index_explore_community=Be Fit !
+index_text =Explore our high-intensity workouts and community-driven fitness programs.
 
 footer_stay_motivated=Stay motivated
 footer_join_community=Join our CrossFit community and transform together
